--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -11,11 +11,5 @@
       "service": "Lambda"
     }
   },
-  "hosting": {
-    "amplifyhosting": {
-      "service": "amplifyhosting",
-      "providerPlugin": "awscloudformation",
-      "type": "manual"
-    }
-  }
+  "hosting": {}
 }
